--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: jaysencryer.com
+description: Welcome to my homepage.  From here you can access examples of my code and links to finished products.
